<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_year_month"
        android:actionLayout="@layout/menu_item_month"
        android:title="@string/year"
        android:visible="false"
        app:showAsAction="always" />

    <group android:id="@+id/menu_save">
        <item
            android:id="@+id/action_save"
            android:title="@string/save"
            android:visible="false"
            app:showAsAction="always" />
    </group>
    <group
        android:id="@+id/menu_input"
        android:visible="false">
        <item
            android:id="@+id/action_input"
            android:title="@string/input"
            app:showAsAction="always" />
    </group>
    <group
        android:id="@+id/menu_settings"
        android:visible="false">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_background"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

    </group>

</menu>