<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book_list"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_setting" />
    </group>
    <item android:title="用户">
        <menu>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>